corrected the alignment in search section

--- a/desktop.css
+++ b/desktop.css
@@ -123,3 +123,23 @@ body {
   border-radius: 12px;
   height: 400px;
 }
+
+.search {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 450px;
+  gap: 32px;
+}
+
+.search-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap:24px;
+}
+
+#search::placeholder {
+  color: #e2c6b5;
+}
